feat: Added employee profile update feature with API, DTO, and DB migration.

--- a/EmployeeMgmtFrontend/src/app/app.component.html
+++ b/EmployeeMgmtFrontend/src/app/app.component.html
@@ -10,7 +10,7 @@
 
         @if(authService.isLoggedIn){
           <div class="flex gap-2 items-center">
-            <span class="text-white">{{ authService.authDetail?.email }}</span>
+            <span routerLink="/profile" class="text-white cursor-pointer">{{ authService.authDetail?.email }}</span>
             <button (click)="logout()" mat-icon-button class="!text-white" aria-label="Example icon-button with menu icon">
               <mat-icon>logout</mat-icon>
             </button>
