--- a/EmployeeMgmtFrontend/src/app/components/table/table.component.html
+++ b/EmployeeMgmtFrontend/src/app/components/table/table.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <table mat-table [dataSource]="data">
+  <table mat-table [dataSource]="pagedData.data">
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
@@ -22,4 +22,16 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+  <div class="flex flex-row-reverse mt-2 px-4">
+    <mat-paginator
+      #paginator
+      class="demo-paginator"
+      (page)="pageChange($event)"
+      [length]="pagedData.totalData"
+      [pageSize]="pageSize"
+      [pageIndex]="pageIndex"
+      aria-label="Select page"
+    >
+    </mat-paginator>
+  </div>
 </mat-card>
