--- a/EmployeeMgmtFrontend/src/app/pages/departments/departments.component.html
+++ b/EmployeeMgmtFrontend/src/app/pages/departments/departments.component.html
@@ -2,12 +2,12 @@
   @if(!isFormOpen){
   <div class="flex justify-between mb-2">
     <h1 class="text-xl font-semibold">Departments</h1>
-    <button mat-flat-button class="!bg-green-500" (click)="isFormOpen = true">
+    <button mat-flat-button class="!bg-green-500" (click)="isFormOpen = true;departmentName='';">
       Add
     </button>
   </div>
 
-  <table class="table-auto border-collapse">
+  <!-- <table class="table-auto border-collapse">
     <thead>
       <tr>
         <th>Id</th>
@@ -29,7 +29,17 @@
 
       }
     </tbody>
-  </table>
+  </table> -->
+  <app-table
+    [pagedData]="departments"
+    [pageIndex]="filter.pageIndex"
+    [pageSize]="filter.pageSize"
+    [displayedColumns]="showCols"
+    (onEdit)="editDepartment($event)"
+    (onDelete)="delete($event)"
+    (onPageChange)="pageChange($event)"
+  ></app-table>
+
   }@else {
   <div class="flex">
     <form class="w-[360px] m-auto shadow-lg py-6 px-16">
