--- a/EmployeeMgmtFrontend/src/app/pages/employee/employee.component.html
+++ b/EmployeeMgmtFrontend/src/app/pages/employee/employee.component.html
@@ -1,15 +1,22 @@
 <div class="p-8">
-  <div class="flex justify-between mb-2">
+  <div class="flex justify-between mb-2 items-center">
     <h1 class="text-xl font-semibold">Employee List</h1>
-    <button mat-flat-button class="!bg-green-500" (click)="add()">
-      Add
-    </button>
+
+    <mat-form-field class="w-4/12">
+      <mat-label>Search</mat-label>
+      <input type="text" matInput [formControl]="searchControl" />
+    </mat-form-field>
+
+    <button mat-flat-button class="!bg-green-500" (click)="add()">Add</button>
   </div>
 
   <app-table
-    [data]="employeeList"
+    [pagedData]="pagedEmployeeData"
+    [pageIndex]="filter.pageIndex"
+    [pageSize]="filter.pageSize"
     [displayedColumns]="showCols"
     (onEdit)="edit($event)"
     (onDelete)="delete($event)"
+    (onPageChange)="pageChange($event)"
   ></app-table>
 </div>
