--- a/EmployeeMgmtFrontend/src/app/components/table/table.component.html
+++ b/EmployeeMgmtFrontend/src/app/components/table/table.component.html
@@ -1,28 +1,50 @@
 <mat-card>
   <table mat-table [dataSource]="pagedData.data">
     <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+                The actual rendered columns are set as a property on the row definition" -->
 
-    @for(item of displayedColumns;track $index){ @if(item=='action'){
-    <ng-container [matColumnDef]="item">
-      <th mat-header-cell *matHeaderCellDef>{{ item }}</th>
-      <td mat-cell *matCellDef="let element" class="flex gap-2 !p-2">
-        <button mat-flat-button (click)="edit(element)">Edit</button>
-          <button mat-flat-button class="!bg-red-500" (click)="delete(element)">Delete</button>
+    @for (item of displayedColumns; track $index) { @if(item.key){
+    <ng-container [matColumnDef]="item.key">
+      <th mat-header-cell *matHeaderCellDef>{{ item.key }}</th>
+      <td mat-cell *matCellDef="let element">
+        <span class="flex gap-4">
+          @if(item.key == 'action'){ @for (btn of item.format(element); track
+          $index) {
+          <button
+            mat-flat-button
+            [class]="btn"
+            (click)="onButtonClick(btn, element)"
+          >
+            {{ btn }}
+          </button>
+
+          } } @else {
+          {{ item.format(element) }}
+          }
+        </span>
       </td>
     </ng-container>
-    }@else {
+    } @else{
+
     <ng-container [matColumnDef]="item">
       <th mat-header-cell *matHeaderCellDef>{{ item }}</th>
-      <td mat-cell *matCellDef="let element">{{ element[item] }}</td>
+      <td mat-cell *matCellDef="let element">
+        @if(item == 'action'){
+        <button mat-flat-button (click)="edit(element)">Edit</button>
+        <button mat-flat-button class="bg-red-500!" (click)="delete(element)">
+          Delete
+        </button>
+        }@else {
+        <span>{{ element[item] }}</span>
+        }
+      </td>
     </ng-container>
-
     }}
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="cols"></tr>
+    <tr mat-row *matRowDef="let row; columns: cols"></tr>
   </table>
-  <div class="flex flex-row-reverse mt-2 px-4">
+  @if(showPage){
+  <div class="flex flex-row-reverse my-2 px-4">
     <mat-paginator
       #paginator
       class="demo-paginator"
@@ -34,4 +56,5 @@
     >
     </mat-paginator>
   </div>
+  }
 </mat-card>
