--- a/EmployeeMgmtFrontend/src/app/pages/employee-dashboard/employee-dashboard.component.html
+++ b/EmployeeMgmtFrontend/src/app/pages/employee-dashboard/employee-dashboard.component.html
@@ -1,1 +1,9 @@
-<p>employee-dashboard works!</p>
+<div class="p-8">
+    <div class="grid grid-cols-3">
+        <mat-card class="p-8">
+            <h1 class="text-exl mb-2">Apply Leaves</h1>
+            <button class="w-6/12" mat-flat-button (click)="applyLeave()" >Apply Leave</button>
+        </mat-card>
+
+    </div>
+</div>
