--- a/EmployeeMgmtFrontend/src/app/pages/employee-dashboard/employee-dashboard.component.html
+++ b/EmployeeMgmtFrontend/src/app/pages/employee-dashboard/employee-dashboard.component.html
@@ -1,9 +1,13 @@
 <div class="p-8">
-    <div class="grid grid-cols-3">
+    <div class="grid grid-cols-1  md:grid-cols-2 lg:grid-cols-3 gap-8">
         <mat-card class="p-8">
             <h1 class="text-exl mb-2">Apply Leaves</h1>
             <button class="w-6/12" mat-flat-button (click)="applyLeave()" >Apply Leave</button>
         </mat-card>
 
+        <mat-card class="p-8">
+            <h1 class="text-exl mb-2">Mark Your Attendance</h1>
+            <button class="" mat-flat-button (click)="markAttendance()" >Mark Present Today</button>
+        </mat-card>
     </div>
 </div>
