--- a/EmployeeMgmtFrontend/src/app/pages/employee/employee-form/employee-form.component.html
+++ b/EmployeeMgmtFrontend/src/app/pages/employee/employee-form/employee-form.component.html
@@ -63,6 +63,11 @@
       <mat-datepicker #picker1></mat-datepicker>
     </mat-form-field>
 
+    <mat-form-field class="w-full">
+      <mat-label>Salary</mat-label>
+      <input type="number" matInput formControlName="salary" />
+    </mat-form-field>
+
     <div>
       <mat-form-field class="w-6/12">
         <mat-label>Joining Date</mat-label>
