--- a/EmployeeMgmtFrontend/src/app/app.component.html
+++ b/EmployeeMgmtFrontend/src/app/app.component.html
@@ -1,43 +1,26 @@
 <header>
-  <mat-toolbar class="!bg-blue-500 flex justify-between">
-    <div class="flex items-center">
-      <button
-        (click)="drawer.toggle()"
-        mat-icon-button
-        class="!text-white"
-        aria-label="Example icon-button with menu icon"
-      >
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span class="!text-white">Employee Management System</span>
-      <span class="example-spacer"></span>
-    </div>
+    <mat-toolbar class="!bg-blue-500 flex justify-between">
+      <div class="flex items-center">
+        <button (click)="drawer.toggle()" mat-icon-button class="!text-white" aria-label="Example icon-button with menu icon">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span class="!text-white">Employee Management System</span>
+        <span class="example-spacer"></span>
+      </div>
 
-    @if(authService.isLoggedIn){
-    <div class="flex gap-2 items-center">
-      <span routerLink="/profile" class="text-white cursor-pointer">{{
-        authService.authDetail?.email
-      }}</span>
-      <button
-        (click)="logout()"
-        mat-icon-button
-        class="!text-white"
-        aria-label="Example icon-button with menu icon"
-      >
-        <mat-icon>logout</mat-icon>
-      </button>
-    </div>
-    }
-  </mat-toolbar>
+        @if(authService.isLoggedIn){
+          <div class="flex gap-2 items-center">
+            <span routerLink="/profile" class="text-white cursor-pointer">{{ authService.authDetail?.email }}</span>
+            <button (click)="logout()" mat-icon-button class="!text-white" aria-label="Example icon-button with menu icon">
+              <mat-icon>logout</mat-icon>
+            </button>
+          </div>
+        }
+   </mat-toolbar>
 </header>
 
 <mat-drawer-container class="">
-  <mat-drawer
-    #drawer
-    class="w-[300px] bg-white shadow-lg"
-    mode="side"
-    [opened]="authService.isLoggedIn"
-  >
+  <mat-drawer #drawer class="w-[300px] bg-white shadow-lg" mode="side" [opened]="authService.isLoggedIn">
     <div class="flex flex-col items-center gap-4 text-blue-700 p-4">
       <mat-nav-list role="list">
         @if( authService.isEmployee ){
